Fix Pronouns Alignment

--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,7 @@ button:hover {
 
 .TopPart {
   display: inline-block;
+  width: 100%;
 }
 
 .homeintro {
@@ -91,7 +92,6 @@ button:hover {
 #pronouns {
   padding-top: 20px;
   font-size: 30px;
-  padding-left: 150px;
 }
 
 #introleft {
